2014-08-01  Mark Lam  <mark.lam@apple.com>

        Add some structure related assertions.
        <https://webkit.org/b/135523>

        Reviewed by Geoffrey Garen.

        Adding 2 assertions:
        1. assert that we don't index pass the end of the StructureIDTable.
           This should never happen, but this assertion will help catch bugs
           where a bad structureID gets passed in.
        2. assert that cells in MarkedBlock::callDestructor() that are not
           zapped should have a non-null StructureID.  This will help us catch
           bugs where the other cell header flag bits get set after the cell is
           zapped, thereby making the cell look like an unzapped cell but has a
           null structureID.

        * heap/MarkedBlock.cpp:
        (JSC::MarkedBlock::callDestructor):
        * runtime/StructureIDTable.h:
        (JSC::StructureIDTable::get):

2014-08-01  Csaba Osztrogonác  <ossy@webkit.org>

        URTBF after r171946 to fix non-Apple builds.

        * bytecode/InlineCallFrameSet.cpp:

2014-08-01  Mark Hahnenberg  <mhahnenberg@apple.com>

        CodeBlock fails to visit the Executables of its InlineCallFrames
        https://bugs.webkit.org/show_bug.cgi?id=135471

        Reviewed by Geoffrey Garen.

        CodeBlock needs to visit its InlineCallFrames' owner Executables. If it doesn't, they 
        can be prematurely collected and cause crashes.

        * bytecode/CodeBlock.cpp:
        (JSC::CodeBlock::stronglyVisitStrongReferences):
        * bytecode/CodeOrigin.h:
        (JSC::InlineCallFrame::visitAggregate):
        * bytecode/InlineCallFrameSet.cpp:
        (JSC::InlineCallFrameSet::visitAggregate):
        * bytecode/InlineCallFrameSet.h:

2014-08-01  Alex Christensen  <achristensen@webkit.org>

        Progress towards cmake on Windows.
        https://bugs.webkit.org/show_bug.cgi?id=135484

        Reviewed by Martin Robinson.

        * CMakeLists.txt: